--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Changlu Chen">Changlu Chen</h1>
 
-          <p class="title">Phd Student</p>
+          <p class="title">PhD Researcher</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+12133522795" class="contact-link">+61 420697813</a>
+              <a href="tel:+12133522795" class="contact-link">+61 0420-697-813</a>
             </div>
 
           </li>
@@ -209,17 +209,16 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+          I am a PhD student from the Faculty of Engineering Information and Technology, University of Technology Sydney (UTS). My research direction is Urban Traffic Forecasting for the Intelligent Transportation System,
+          and I am expected to graduate in March 2024. 
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            The following is my summary:
+          • Dedicated machine learning and deep learning professional with 6 years of extensive experience acquired during the pursuit of both my master's (3 years) and PhD (3 years) degrees. 
+          •	Demonstrated success in developing 4 Transformer-based based deep learning models for developing the Urban Intelligent Transportation System, each leading to over 10% performance improvement.
+          •	Passionate about tackling real-world machine learning challenges, actively collaborating with cross-functional teams, and possessing effective communication, presentation, and writing skills.
+
           </p>
         </section>
 
