--- a/index.html
+++ b/index.html
@@ -209,17 +209,19 @@
 
         <section class="about-text">
           <p>
-          I am a PhD student from the Faculty of Engineering Information and Technology, University of Technology Sydney (UTS). My research direction is Urban Traffic Forecasting for the Intelligent Transportation System,
+          I am a PhD student from the Faculty of Engineering Information and Technology, University of Technology Sydney (UTS). My research direction is Deep Learning based Urban Traffic Forecasting for the Intelligent Transportation System,
           and I am expected to graduate in March 2024. 
           </p>
-
           <p>
-            The following is my summary:
-          • Dedicated machine learning and deep learning professional with 6 years of extensive experience acquired during the pursuit of both my master's (3 years) and PhD (3 years) degrees. 
-          •	Demonstrated success in developing 4 Transformer-based based deep learning models for developing the Urban Intelligent Transportation System, each leading to over 10% performance improvement.
-          •	Passionate about tackling real-world machine learning challenges, actively collaborating with cross-functional teams, and possessing effective communication, presentation, and writing skills.
+            Dedicated machine learning and deep learning professional with 6 years of extensive experience acquired during the pursuit of both my master's (3 years) and PhD (3 years) degrees. 
+          <p>
+          <p>
+            Demonstrated success in developing 4 Transformer-based based deep learning models for developing the Urban Intelligent Transportation System, each leading to over 10% performance improvement.
+          <p>
+          <p>
+            Passionate about tackling real-world machine learning challenges, actively collaborating with cross-functional teams, and possessing effective communication, presentation, and writing skills.
+          <p>
 
-          </p>
         </section>
 
 
