--- a/index.html
+++ b/index.html
@@ -209,17 +209,17 @@
 
         <section class="about-text">
           <p>
-          I am a PhD student from the Faculty of Engineering Information and Technology, University of Technology Sydney (UTS). My research direction is Deep Learning based Urban Traffic Forecasting for the Intelligent Transportation System,
+          I am a PhD student from the Faculty of Engineering Information and Technology (FEIT), University of Technology Sydney (UTS). My research direction is Deep Learning based Urban Traffic Forecasting for the Intelligent Transportation System,
           and I am expected to graduate in March 2024. 
           </p>
           <p>
-            Dedicated machine learning and deep learning professional with 6 years of extensive experience acquired during the pursuit of both my master's (3 years) and PhD (3 years) degrees. 
+            I am a dedicated machine learning and deep learning professional with 6 years of extensive experience acquired during the pursuit of both my master's (3 years) and PhD (3 years) degrees. 
           <p>
           <p>
-            Demonstrated success in developing 4 Transformer-based based deep learning models for developing the Urban Intelligent Transportation System, each leading to over 10% performance improvement.
+            I have demonstrated success in developing 4 Transformer-based based deep learning models for developing the Urban Intelligent Transportation System, each leading to over 10% performance improvement.
           <p>
           <p>
-            Passionate about tackling real-world machine learning challenges, actively collaborating with cross-functional teams, and possessing effective communication, presentation, and writing skills.
+            I am passionate about tackling real-world machine learning challenges, actively collaborating with cross-functional teams, and possessing effective communication, presentation, and writing skills.
           <p>
 
         </section>
@@ -229,7 +229,7 @@
           - service
         -->
 
-        <section class="service">
+<!--         <section class="service">
 
           <h3 class="h3 service-title">What i'm doing</h3>
 
@@ -302,10 +302,10 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
 
-        <!--
+<!--         <!--
           - testimonials
         -->
 
@@ -504,7 +504,7 @@
         </section>
 
       </article>
-
+ -->
 
 
 
@@ -533,41 +533,37 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">University of Technology Sydney | Sydney, NSW | Ph.D. in Computer Science </h4>
 
-              <span>2007 — 2008</span>
+              <span>Oct 2020 — Mar 2024 (Expected) - Full Time </span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+              Successfully conducted 4 research projects on Urban Traffic Forecasting for the Intelligent Transportation System. Completed 4 papers in high-rank conferences and journals.
+
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Lanzhou University | China | Master of Science in Computer Science</h4>
 
-              <span>2006 — 2007</span>
+              <span>Sept 2017 — June 2020</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+              Successfully conducted 3 research projects on Machine Learning. Completed 2 papers in high-rank journals.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">Lanzhou University | China | Bachelor of Science in Computer Science</h4>
 
-              <span>2002 — 2004</span>
+              <span>2013 — 2017</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+              GPA: 4.21 
               </p>
 
             </li>
