--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
           - testimonials
         -->
 
-        <section class="testimonials">
+<!--         <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -408,11 +408,10 @@
         </section>
 
 
-        <!--
-          - testimonials modal
+<!--                   - testimonials modal
         -->
 
-        <div class="modal-container" data-modal-container>
+<!--         <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -450,14 +449,14 @@
 
           </section>
 
-        </div>
+        </div> -->
 
 
         <!--
           - clients
         -->
 
-        <section class="clients">
+<!--         <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -503,8 +502,8 @@
 
         </section>
 
-      </article>
- -->
+      </article> -->
+<!--  --> 
 
 
 
@@ -586,15 +585,14 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Ph.D. Researcher</h4>
 
-              <span>2015 — Present</span>
+              <span>Oct 2020 - Mar 2024 (Expected) - Full Time</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+              Conducted data analysis, preprocessing, and visualization tasks on a range of datasets with Python.
               </p>
+
 
             </li>
 
