--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </section>
 
 
-        <!--
+        
           - service
         -->
 
@@ -456,7 +456,7 @@
           - clients
         -->
 
-<!--         <section class="clients">
+      <!-- <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -500,10 +500,9 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
-      </article> -->
-<!--  --> 
+      </article>
 
 
 
