--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           - service
         -->
 
-<!--         <section class="service">
+        <section class="service">
 
           <h3 class="h3 service-title">What i'm doing</h3>
 
@@ -500,7 +500,7 @@
 
           </ul>
 
-        </section> -->
+        </section>
 
       </article>
 
