--- a/index.html
+++ b/index.html
@@ -305,11 +305,11 @@
         </section> -->
 
 
-<!--         <!--
+        <!--
           - testimonials
         -->
 
-<!--         <section class="testimonials">
+        <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -408,10 +408,11 @@
         </section>
 
 
-<!--                   - testimonials modal
+        <!--
+          - testimonials modal
         -->
 
-<!--         <div class="modal-container" data-modal-container>
+        <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -449,14 +450,14 @@
 
           </section>
 
-        </div> -->
+        </div>
 
 
         <!--
           - clients
         -->
 
-      <!-- <section class="clients">
+        <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -503,6 +504,9 @@
         </section>
 
       </article>
+
+
+
 
 
 
