--- a/index.html
+++ b/index.html
@@ -595,46 +595,46 @@
 
               <ul>
                 <li>
-
+                  <p class="timeline-text">
                     Conducted data analysis, preprocessing, and visualization tasks on a range of datasets with Python.
-
+                  </p>
                 </li>
                 <li>
                   <p class="timeline-text">
                     Developed a deep learning model based on the adaptive Transformer with PyTorch for the prediction of traffic flow within the next hour. https://github.com/chenchl19941118/Bi-STAT
-                  <p>                  
+                  </p>                  
                   <ul>
                     <li>
                       <p class="timeline-text"></p>
                       Designed a dynamic halting mechanism to adaptively allocate the computing resources of the Transformer according to the complexity of traffic flow patterns in different locations and time steps. 
-                      <p>
+                    </p>
                     </li>                   
                     <li>
                       <p class="timeline-text"></p>
                       The model delivered a 10% enhancement in forecasting accuracy, making it a valuable tool for route planning optimization and the reduction of traffic congestion.
-                      <p> 
+                    </p> 
                     </li>
                   </ul>
                 </li>
                 <li>
                   <p class="timeline-text">
                     Created a deep learning model based on the Transformer and CNNs with PyTorch for the detection of traffic accidents occurring within the next hour. https://github.com/chenchl19941118/RiskContra
-                  <p> 
+                  </p> 
                     <ul>
                       <li>
                         <p class="timeline-text"></p>
                         Devised multi-kernel Convolutional Neural Networks (CNNs) with various kernel sizes, effectively addressing variations in accident densities across different regions. 
-                        <p>
+                      </p>
                       </li>                   
                       <li>
                         <p class="timeline-text"></p>
                         Designed the data augmentation technique and applied the contrastive learning to address the data scarcity challenge in traffic accident data.
-                        <p> 
+                      </p> 
                       </li>
                       <li>
                         <p class="timeline-text"></p>
                         The model demonstrated 12% improvement in forecasting potential traffic accidents, significantly saving lives and properties in both individual and societal perspectives.
-                        <p> 
+                      </p> 
                       </li>
                     </ul>                   
                 </li>
@@ -642,17 +642,17 @@
                 <li>
                   <p class="timeline-text">
                     Created a frequency domain Transformer with PyTorch to forecast the 6-hour demand for transportation services like taxis and shared bikes.
-                  <p> 
+                  </p> 
                     <ul>
                       <li>
                         <p class="timeline-text"></p>
                         Utilized the Fourier Transform to analyze traffic data, capturing spectral information from a broad range of frequency components.
-                        <p>
+                      </p>
                       </li>                   
                       <li>
                         <p class="timeline-text"></p>
                         Enhanced traffic demand forecasting accuracy, resulting in a 10% improvement.
-                        <p> 
+                      </p> 
                       </li>
                     </ul>                   
                 </li>
@@ -665,12 +665,12 @@
                       <li>
                         <p class="timeline-text"></p>
                         Enhanced the practicality of real-world traffic forecasting tasks, facilitating more efficient resource allocation for Uber drivers and government transportation services.
-                        <p>
+                      </p>
                       </li>                   
                       <li>
                         <p class="timeline-text"></p>
                         Achieved an 11% performance improvement in traffic demand forecasting.
-                        <p> 
+                      </p> 
                       </li>
                     </ul>                   
                 </li>
