--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
               <span>Oct 2020 - Mar 2024 (Expected) - Full Time</span>
 
 
-              <!-- <style>
+              <style>
                 /* Style to hide the list bullets */
                 ul {
                   list-style: none;
@@ -610,7 +610,7 @@
                   color: white; /* Change the text color based on your design */
                   margin-bottom: 10px; /* Add some space between list items */
                 }
-              </style> -->
+              </style>
               
               <ul>
                 <li>
