--- a/index.html
+++ b/index.html
@@ -636,7 +636,63 @@
                     </li>
                   </ul>
                 </li>
-                <!-- Repeat the pattern for other list items -->
+                <li>
+                  <p class="timeline-text">
+                    Created a deep learning model based on the Transformer and CNNs with PyTorch for the detection of traffic accidents occurring within the next hour. 
+                    <a href="https://github.com/chenchl19941118/RiskContra">GitHub Link</a>
+                  </p>
+                  <ul>
+                    <li>
+                      <p class="timeline-text">
+                        Devised multi-kernel Convolutional Neural Networks (CNNs) with various kernel sizes, effectively addressing variations in accident densities across different regions.
+                      </p>
+                    </li>
+                    <li>
+                      <p class="timeline-text">
+                        Designed the data augmentation technique and applied the contrastive learning to address the data scarcity challenge in traffic accident data.
+                      </p>
+                    </li>
+                    <li>
+                      <p class="timeline-text">
+                        The model demonstrated 12% improvement in forecasting potential traffic accidents, significantly saving lives and properties in both individual and societal perspectives.
+                      </p>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <p class="timeline-text">
+                    Created a frequency domain Transformer with PyTorch to forecast the 6-hour demand for transportation services like taxis and shared bikes.
+                  </p>
+                  <ul>
+                    <li>
+                      <p class="timeline-text">
+                        Utilized the Fourier Transform to analyze traffic data, capturing spectral information from a broad range of frequency components.
+                      </p>
+                    </li>
+                    <li>
+                      <p class="timeline-text">
+                        Enhanced traffic demand forecasting accuracy, resulting in a 10% improvement.
+                      </p>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <p class="timeline-text">
+                    Developed a test-time-training traffic demand forecaster based on Transformer with PyTorch, which can optimize the model at test time before the deployment and alleviate the distribution shift in training and testing data.
+                  </p>
+                  <ul>
+                    <li>
+                      <p class="timeline-text">
+                        Enhanced the practicality of real-world traffic forecasting tasks, facilitating more efficient resource allocation for Uber drivers and government transportation services.
+                      </p>
+                    </li>
+                    <li>
+                      <p class="timeline-text">
+                        Achieved an 11% performance improvement in traffic demand forecasting.
+                      </p>
+                    </li>
+                  </ul>
+                </li>
               </ul>
               
 
