--- a/index.html
+++ b/index.html
@@ -594,11 +594,10 @@
 
 
               <style>
-                /* Style to hide the list bullets */
-                /* ul {
-                  list-style: none;
-                  padding-left: 0;
-                } */
+                /* Resetting the default list styles for the main list */
+                ul {
+                  padding-left: 20px; /* Add some padding for the main list */
+                }
               
                 /* Add left margin for nested lists */
                 ul ul {
