--- a/index.html
+++ b/index.html
@@ -596,7 +596,8 @@
               <style>
                 /* Resetting the default list styles for the main list */
                 ul {
-                  padding-left: 20px; /* Add some padding for the main list */
+                  list-style-type: disc;
+                  padding-left: 0; /* Add some padding for the main list */
                 }
               
                 /* Add left margin for nested lists */
