--- a/index.html
+++ b/index.html
@@ -598,6 +598,7 @@
                 ul {
                   list-style-type: disc;
                   padding-left: 0; /* Add some padding for the main list */
+                  color: white;
                 }
               
                 /* Add left margin for nested lists */
