--- a/index.html
+++ b/index.html
@@ -702,29 +702,27 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Teacher's Assistant</h4>
 
-              <span>2013 — 2015</span>
+              <span>Aug 2023 until now - Contract</span>
 
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+              <li>
+                <p class="timeline-text">
+                  Delivered professional mentoring in Java and Python programming to college students.
+                </p>
+              </li>
 
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Web designer</h4>
-
-              <span>2010 — 2013</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+              <li>
+                <p class="timeline-text">
+                  Provided consultation to students' Machine Learning projects.
+                </p>
+              </li>
+              
+              <li>
+                <p class="timeline-text">
+                  Maintained clear communication with both the students and Professor to track the progress.
+                </p>
+              </li>
 
             </li>
 
@@ -736,7 +734,7 @@
 
           <h3 class="h3 skills-title">My skills</h3>
 
-          <ul class="skills-list content-card">
+          <!-- <ul class="skills-list content-card">
 
             <li class="skills-item">
 
@@ -790,7 +788,37 @@
 
             </li>
 
-          </ul>
+          </ul> -->
+
+          <li>
+            <p class="timeline-text">
+              Machine Learning Related
+            </p>
+            <ul>
+              <li>
+                <p class="timeline-text">
+                  PyTorch and TensorFlow
+                </p>
+              </li>
+              <li>
+                <p class="timeline-text">
+                  Scikit-learn and Pandas
+                </p>
+              </li>
+              <li>
+                <p class="timeline-text">
+                  Transformer
+                </p>
+              </li>
+              <li>
+                <p class="timeline-text">
+                  Large Language Model
+                </p>
+              </li>
+            </ul>
+          </li>
+
+          
 
         </section>
 
