--- a/index.html
+++ b/index.html
@@ -734,12 +734,12 @@
 
           <h3 class="h3 skills-title">My skills</h3>
 
-          <!-- <ul class="skills-list content-card">
+          <ul class="skills-list content-card">
 
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
+                <h5 class="h5">PyTorch and TensorFlow</h5>
                 <data value="80">80%</data>
               </div>
 
@@ -752,7 +752,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
+                <h5 class="h5">Scikit-learn and Pandas</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -765,7 +765,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
+                <h5 class="h5">Transformer</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -778,7 +778,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
+                <h5 class="h5">Large Language Model</h5>
                 <data value="50">50%</data>
               </div>
 
@@ -787,9 +787,72 @@
               </div>
 
             </li>
+            <li class="skills-item">
 
-          </ul> -->
-        <ul>
+              <div class="title-wrapper">
+                <h5 class="h5">SQL</h5>
+                <data value="50">50%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%;"></div>
+              </div>
+
+            </li>
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Linux</h5>
+                <data value="50">50%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%;"></div>
+              </div>
+
+            </li>
+          <li class="skills-item">
+
+            <div class="title-wrapper">
+              <h5 class="h5">Git </h5>
+              <data value="50">50%</data>
+            </div>
+
+            <div class="skill-progress-bg">
+              <div class="skill-progress-fill" style="width: 50%;"></div>
+            </div>
+
+          </li>
+
+          <li class="skills-item">
+
+            <div class="title-wrapper">
+              <h5 class="h5">Google Cloud Platform </h5>
+              <data value="50">50%</data>
+            </div>
+
+            <div class="skill-progress-bg">
+              <div class="skill-progress-fill" style="width: 50%;"></div>
+            </div>
+
+          </li>
+
+          <li class="skills-item">
+
+            <div class="title-wrapper">
+              <h5 class="h5">Python; Java </h5>
+              <data value="50">50%</data>
+            </div>
+
+            <div class="skill-progress-bg">
+              <div class="skill-progress-fill" style="width: 50%;"></div>
+            </div>
+
+          </li>
+
+
+          </ul>
+        <!-- <ul>
           <li>
             <p class="timeline-text">
               Machine Learning Related
@@ -817,7 +880,7 @@
               </li>
             </ul>
           </li>
-        </ul>
+        </ul> -->
 
 
 
